# agents-workshop

./: .env.example  .gitignore  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/agents/: PythonDeveloper.agent.md  copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.venv312/: pyvenv.cfg
.venv312/Scripts/: activate  activate.bat
.virtual_documents/notebooks/: 01_simple_agent_mcp.ipynb
configs/agents/: research_agent.yaml  summarizer_agent.yaml
configs/workflows/: research_pipeline.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  COST_GUIDANCE.md
notebooks/: 00_setup.ipynb  01_simple_agent_mcp.ipynb  02_agui_interface.ipynb  03_a2a_protocol.ipynb  04_deterministic_workflows.ipynb  05_declarative_agents.ipynb  06_agent_discussions.ipynb  07_evaluation_evolution.ipynb
specs/001-agentic-patterns-workshop/: data-model.md  plan.md  quickstart.md  refactor-04-workflows-tasks.md  refactor-04-workflows.md  research.md  spec.md  tasks.md
specs/001-agentic-patterns-workshop/checklists/: requirements.md
specs/001-agentic-patterns-workshop/contracts/: a2a-protocol.md  agui-events.md  mcp-tools.md
specs/002-agui-refactoring/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-evaluation-refactoring/: plan.md  research.md  spec.md  tasks.md
specs/main/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/main/contracts/: a2a-sdk-interfaces.md
src/agents/: __init__.py  a2a_server.py  a2a_server_custom.py.bak  agui_server.py  base_agent.py  declarative.py  discussion.py  factories.py  moderator_agent.py  research_agent.py
src/common/: __init__.py  config.py  evaluation.py  exceptions.py  prompt_tuning.py  telemetry.py  yaml_loader.py
src/tools/: __init__.py  calculator_tool.py  file_tool.py  mcp_server.py  search_tool.py
src/workflows/: __init__.py  builders.py  engine.py  steps.py
tests/: conftest.py
tests/contract/: __init__.py  test_a2a_schemas.py  test_a2a_schemas_sdk.py  test_agui_schemas.py  test_mcp_schemas.py
tests/integration/: test_scenario_01.py  test_scenario_02.py  test_scenario_03.py  test_scenario_04.py  test_scenario_05.py  test_scenario_06.py  test_scenario_07.py
tests/unit/: test_agui.py  test_common.py  test_declarative.py  test_discussion.py  test_evaluation.py  test_factories.py  test_file_tool.py  test_workflows.py
